Fixed a layout issue on Russian translation

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -35,8 +35,12 @@
  * Baseline
  */
 .baseline {
-  font-size: 2.5em;
+  font-size: 2em;
   text-transform: initial;
   color: $main-color;
   margin-bottom: 5rem;
+
+  @include respond-to('medium') {
+    font-size: 2.5em;
+  }
 }
